fix: ul li spacing

--- a/front/src/css/styles.css
+++ b/front/src/css/styles.css
@@ -7,3 +7,7 @@ body {
 header, footer {
     text-align: center;
 }
+
+ul li:not(:last-child) {
+    margin-bottom: 10px;
+}
